packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-12/fixed.js
foo('baz')

function foo(token) {
	if (token) {
		return bar(token.value);
	}
}

function bar(value) {
	if (value?.name) {
	}
}
